* All time values are now in the same unit (seconds)
* Options tied to malfunctions in config.json are now inverted, making them easier to understand while also removing the need to use precedence of options
* Add option to use a faster but inaccurate comparison technique, it will compare filenames only (like the early versions)

2.4 - Fear of the Dark
This release focuses on making selection conditions more versatile by using a logical expression analyzer (a very simple one, don't expect too much) available as a separate project in https://github.com/1deterministic/Simple-Logical-Expression-Analyzer
* Added custom selection conditions by logical expression
* File age filtering is now a selection condition
* Added MIME type selection condition
* Added file size selection condition
* Added option to choose between running continuously or just once and stop the execution
* Added prevention to logging the same line multiple times
* Dropped the option to limit the size of the Logs folder

2.3 - Everything Evil
This release is a major code cleanup, segregating more the jobs in different classes. Also adds support for localisation to be added later
* Added startup delay option
* Added option to run the post sync script only if a sync occurred
* Added option to generate the log only if an error occurred
* The program now prevents source and destination folders from being under each other (or the same)
* The program now will now also verify the file content before assuming 2 files are the same
* Fixed the order of entries being messed when writing a json file back on the disk
* Dropped nuitka builds, the requirements for running with Python 3 are now in the readme

2.2 - Die for Glory
This release focuses on making configuration as optional as possible
* Most options in the json files are now optional
* Added option to limit the size of the Logs folder
* Added time based filtering

2.1 - Carry on
This release adds some functionalities over the previous release