@@ -5,6 +5,6 @@ Stores information about the program
 '''
 
 name = "1D-Sync"
-version = "2.5-alpha7"
-build_date = "2018/12/09"
+version = "2.5-alpha8"
+build_date = "2018/12/10"
 codename = "Ghost River"
